# ddc-brightness-daemon

./: Cargo.toml  README.md  brightctl.1  ddc-brightness-daemon.service
src/: client.rs  lib.rs  main.rs
