[package]
name = "ddc-brightness-daemon"
version = "0.2.0"
edition = "2024"
authors = ["Sam Leonard <tritoke@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "A daemon and client for controlling external monitor brightness."
repository = "https://github.com/tritoke/ddc-brightness-daemon"
keywords = ["brightness", "brightctl", "ddc"]
categories = ["command-line-utilities"]
default-run = "ddc-brightness-daemon"

[dependencies]
ddc = "0.2.2"
ddc-hi = "0.4"
lexopt = "0.3.2"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[[bin]]
name = "brightctl"
path = "src/client.rs"
